[package]
name = "json_benchmarking"
version = "0.1.0"
authors = ["Jacher <jwc2002@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sn = "0.1.2"
serde_json = "1.0.64"
tinyjson = "2.2.0"
simple_json = "0.2.3"
json-parser = "1.0.2"
lite-json = "0.1.3"
pjson_parser = "0.1.0"
erjson = "0.1.0"
json-peek = "0.0.2"
json-pop = "0.0.2"
jstr = "0.1.1"
strason = "0.4.0"
smoljson = "0.1.0"
json = "0.12.4"